# NeptuneOS

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  3rdparty-license.txt  CHANGELOG  bochsrc  bochsrc-amd64  build.sh  llvm-elf.cmake  llvm-pe.cmake  mkfloppy.sh  mkiso.sh  mkpsxflp.sh  notes.txt  readme.md  run.sh
base/: CMakeLists.txt  base.cmake
base/ntcmd/: CMakeLists.txt  display.c  edlin.c  file.c  hardware.c  input.c  keytrans.c  main.c  ntcmd.h  ntreg.c  process.c  shell.c  sysinfo.c
base/ntcmd/inc/: ntfile.h  ntreg.h  precomp.h
base/ntcmd/src/: display.c  file.c  hardware.c  input.c  keytrans.c  main.c  ntfile.c  ntreg.c  process.c  shell.c  sysinfo.c
base/smss/: CMakeLists.txt  hw.c  keytrans.c  main.c  reg.c  smss.h
base/smss/inc/: smss.h
base/smss/src/: hw.c  main.c  reg.c
base/umtests/: CMakeLists.txt  device.c  diskbench.c  diskbench.h  file.c  umtests.c  umtests.h  util.c
cmake/: sel4.cmake
drivers/: CMakeLists.txt
drivers/base/: CMakeLists.txt
drivers/base/beep/: CMakeLists.txt  beep.c
drivers/base/null/: CMakeLists.txt  null.c
drivers/base/pnp/: CMakeLists.txt  arc.c  arc.h  pnp.c
drivers/bus/: CMakeLists.txt
drivers/bus/acpi/: CMakeLists.txt  acpi.inf  acpi.rc  eval.c  main.c  osl.c  pnp.c  power.c  precomp.h
drivers/bus/acpi/battc/: CMakeLists.txt  battc.c  battc.h  battc.rc
drivers/bus/acpi/busmgr/: acpi_bus.h  acpi_drivers.h  bus.c  button.c  ec.c  enum.c  hwhacks.c  pdo.c  power.c  utils.c
drivers/bus/acpi/cmbatt/: CMakeLists.txt  cmbatt.c  cmbatt.h  cmbatt.rc  cmbpnp.c  cmbwmi.c  cmexec.c
drivers/bus/pci/: CMakeLists.txt  busnum.c  cardbus.c  cmreslist.h  config.c  debug.c  devhere.c  device.c  dispatch.c  enum.c  fdo.c  hookhal.c  id.c  init.c  pci.rc  pcibridge.c  pcidrv.h  pdo.c  power.c  romimage.c  state.c  usage.c  utils.c
drivers/filesystems/: CMakeLists.txt
drivers/filesystems/fatfs/: CMakeLists.txt  blockdev.c  cleanup.c  close.c  create.c  dir.c  direntry.c  dirwr.c  ea.c  fat.c  fatdir.c  fatfs.c  fatfs.h  fatfs.rc  fatfs_reg.inf  fatxdir.c  fcb.c  finfo.c  flush.c  fsctl.c  misc.c  pnp.c  rw.c  shutdown.c  string.c  volume.c
drivers/input/: CMakeLists.txt
drivers/input/i8042prt/: CMakeLists.txt  createclose.c  guid.c  hwhacks.c  i8042prt.c  i8042prt.h  i8042prt_reg.inf  keyboard.c  misc.c  mouse.c  pnp.c  ps2pp.c  readwrite.c  registry.c
drivers/input/kbdclass/: CMakeLists.txt  guid.c  kbdclass.c  kbdclass.h  kbdclass_reg.inf
drivers/lib/: CMakeLists.txt
drivers/lib/dmilib/: CMakeLists.txt  dmi.h  dmilib.c  dmilib.h  precomp.h
drivers/lib/lnxdrv/: CMakeLists.txt
drivers/lib/wdmguid/: CMakeLists.txt  wdmguid.c
drivers/lib/wmilib/: CMakeLists.txt  wmilib.c  wmilib.rc
drivers/linux/: CMakeLists.txt  main.c
drivers/net/: CMakeLists.txt
drivers/net/ethernet/: CMakeLists.txt  ethernet.c  ethernet.rc
drivers/storage/: CMakeLists.txt
drivers/storage/class/: CMakeLists.txt
drivers/storage/fdc/: CMakeLists.txt  fdc.c  fdc.h  fdc.rc  fdo.c  hw.c  hw.h  ioctl.c  pdo.c  rw.c
drivers/storage/miniport/: CMakeLists.txt
drivers/storage/mountmgr/: CMakeLists.txt  database.c  device.c  mntmgr.h  mountmgr.c  mountmgr.rc  notify.c  point.c  symlink.c  uniqueid.c
drivers/storage/partmgr/: CMakeLists.txt  guid.c  partition.c  partmgr.c  partmgr.h  partmgr.rc  partmgr_reg.inf  utils.c
drivers/storage/port/: CMakeLists.txt
posix/psxdll/: CMakeLists.txt
posix/psxdll/inc/: psxdll.h  psxdllp.h
posix/psxdll/src/: init.c
private/hal/: CMakeLists.txt  hal.spec
private/hal/inc/: hal.h  halp.h  irp.h
private/hal/src/: coroutine.c  coroutine.h  device.c  driver.c  halsvc.c  irp.c  main.c  timer.c  util.c
private/hal/tools/: genincdata.c
private/ntdll/: CMakeLists.txt  ntdll.rc  ntdll.spec
private/ntdll/inc/: arm64asm.h  asm.h  asm.inc  ke.h  ntdll.h  rtl.h
private/ntdll/src/: main.c
private/ntdll/tools/: common.template.h  genincdata.c  ks386.template.h  ksamd64.template.h  ksarm64.template.h
private/ntlnxshim/: CMakeLists.txt
private/ntlnxshim/inc/: ntdll.h  wdmp.h
private/ntlnxshim/src/: init.c  krnl.c
private/ntos/: CMakeLists.txt  Findntos.cmake  ntos.lds
private/ntos/cmake/: flags.cmake  sel4.cmake
private/ntos/inc/: cm.h  ex.h  gnu.h  hal.h  icif.h  io.h  ke.h  ldr.h  mm.h  ntos.h  ntosdef.h  ob.h  ps.h  rtl.h
private/ntpsx/: CMakeLists.txt
private/ntpsx/inc/: ntdll.h
private/ntpsx/src/: except.c  init.c  pool.c
private/ntsvc/: CMakeLists.txt  ntsvc.lds  x86_64.lds
private/ntsvc/cmake/: flags.cmake  sel4.cmake
private/ntsvc/inc/: ex.h  ke.h  ldr.h  mm.h  ntsvc.h  rtl.h
private/ntsvc/lib/: CMakeLists.txt
private/ntsvc/rtl/: CMakeLists.txt  Findsel4runtime.cmake
private/ntsvc/src/: main.c
private/rtl/: CMakeLists.txt  Findrtl.cmake  README.md  halsvc.xml  syssvc-gen.py  syssvc.xml  syssvc.xsd  wdmsvc.xml
private/rtl/crt/: README.md
private/rtl/inc/: avltree.h  client_svc_helpers.h  compile_assert.h  ctype_inline.h  dbgtrace.h  debug.h  gnu.h  halsvc.h  image.h  ntimage.h  pool.h  printf.h  private_ntstatus.h  pshpack4.h  services.h  strings.h  util.h  wdmsvc.h  x86asm.h
private/rtl/include/: rtl.h  stdint.h
private/rtl/src/: avltree.c  bitmap.c  cap.c  crt1.c  ctype.c  debug.c  image.c  memcpy.c  memset.c  pool.c  rangelist.c  start.c  start_root.c  time.c  unicode.c  utf8.c  util.h  vsprintf.c
private/wdm/: CMakeLists.txt  wdm.rc  wdm.spec
private/wdm/inc/: coroutine.h  halp.h  irp.h  wdmp.h
private/wdm/src/: cache.c  coroutine.c  coroutine.h  device.c  disksup.c  dma.c  driver.c  event.c  file.c  fsrtl.c  fstub.c  haldma.h  ioport.c  irp.c  isr.c  main.c  power.c  queryrc.c  timer.c  util.c  wdmsvc.c  wmi.c  workitem.c
private/wdm/tools/: genincdata.c  wdmasm.template.h
tools/elfloader/: .gitignore  CMakeLists.txt  LICENSE_GPLv2.txt  README.md  cpio.cmake
tools/elfloader/include/: abort.h  assembler.h  cpio.h  drivers.h  elfloader_common.h  fdt.h  printf.h  strops.h  types.h  vargs.h
tools/elfloader/src/: archive.bin.lds  common.c  crypt_md5.h  crypt_sha256.h  defaults.c  fdt.c  hash.h  printf.c  string.c
(+866 files in other folders)
